<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="#4CAF50"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewOpponentCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/cardback"
                android:contentDescription="@string/image_of_card" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButtonEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/end"
                    android:foreground="@android:drawable/ic_menu_close_clear_cancel"
                    android:foregroundGravity="center"
                    app:fabSize="mini"
                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

                <ImageView
                    android:id="@+id/imageViewOpponentStack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_of_stack"
                    app:srcCompat="@drawable/cardstack" />

                <TextView
                    android:id="@+id/textViewOpponentStackLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/opponent_s_stack" />

                <TextView
                    android:id="@+id/textViewOpponentStack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:gravity="center"
                    android:text="@string/_26"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:text="@string/status"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="#3F51B5"
            android:backgroundTint="#3F51B5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewPlayerCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/cardback"
                android:contentDescription="@string/image_of_card" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewPlayerStack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/cardstack"
                    android:contentDescription="@string/image_of_stack" />

                <TextView
                    android:id="@+id/textViewPlayerStackLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/your_stack" />

                <TextView
                    android:id="@+id/textViewPlayerStack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:gravity="center"
                    android:text="@string/_26"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/buttonPlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/play_next_hand"
                    android:text="@string/play_next_hand"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButtonHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:clickable="true"
                    android:contentDescription="@string/help"
                    android:cropToPadding="true"
                    android:foreground="@android:drawable/ic_menu_help"
                    android:foregroundGravity="center"
                    app:fabSize="auto"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_help" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>